--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       and help me smooth move.]</p>
   </div>
 
+  <div>
+  <h2>Project Image</h2>
+  <img src="p1.jpg" alt="Project Image" width="400" height="300" />
+</div>
+
   <body onload="main()">
     <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
@@ -42,9 +47,9 @@
     Segments Count <input type="range" min="3" max="100" value="0" class="slider" id="segmentsSlide">
 
 
-    <script src="lib/webgl-utils.js"></script>
-    <script src="lib/webgl-debug.js"></script>
-    <script src="lib/cuon-utils.js"></script>
+    <script src="../lib/webgl-utils.js"></script>
+    <script src="../lib/webgl-debug.js"></script>
+    <script src="../lib/cuon-utils.js"></script>
     <script src="Triangle.js"></script>
     <script src="Pacman.js"></script>
     <script src="Point.js"></script>
