--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     Segments Count <input type="range" min="3" max="100" value="0" class="slider" id="segmentsSlide">
 
 
-    <script src="../lib/webgl-utils.js"></script>
-    <script src="../lib/webgl-debug.js"></script>
-    <script src="../lib/cuon-utils.js"></script>
+    <script src="lib/webgl-utils.js"></script>
+    <script src="lib/webgl-debug.js"></script>
+    <script src="lib/cuon-utils.js"></script>
     <script src="Triangle.js"></script>
     <script src="Pacman.js"></script>
     <script src="Point.js"></script>
